package ub.edu.model.Transport;

public class APeu extends Transport{
    public APeu(String id, float velocitat) {
        super(id,velocitat);
    }

    public String toString(){
        return "APeu";
    }
}
